--- a/infra/requirements.txt
+++ b/infra/requirements.txt
@@ -10,5 +10,7 @@ aws-cdk.aws_cloudwatch==1.122.0
 boto3==1.18.64
 aws-cdk.aws_sns==1.122.0
 aws-cdk.aws_cloudwatch_actions==1.122.0
-aws_cdk.aws_dynamodb==1.122.0
+aws-cdk.aws_dynamodb==1.122.0
 aws-cdk.aws_lambda_event_sources==1.122.0
+aws-cdk.aws_codepipeline_actions==1.122.0
+aws-cdk.pipelines==1.122.0
