--- a/infra/requirements.txt
+++ b/infra/requirements.txt
@@ -15,4 +15,5 @@ aws-cdk.aws_lambda_event_sources==1.128.0
 aws-cdk.aws_codepipeline_actions==1.128.0
 aws-cdk.pipelines==1.128.0
 aws-cdk.aws_codebuild==1.128.0
+pytest==6.2.5
 
