--- a/infra/requirements.txt
+++ b/infra/requirements.txt
@@ -16,4 +16,5 @@ aws-cdk.aws_codepipeline_actions==1.128.0
 aws-cdk.pipelines==1.128.0
 aws-cdk.aws_codebuild==1.128.0
 pytest==6.2.5
+aws-cdk.aws_codedeploy==1.128.0
 
