--- a/infra/requirements.txt
+++ b/infra/requirements.txt
@@ -17,6 +17,6 @@ aws-cdk.pipelines==1.128.0
 aws-cdk.aws_codebuild==1.128.0
 pytest==6.2.5
 aws-cdk.aws_codedeploy==1.128.0
-
+requests==2.26.0
 aws-cdk.aws_apigateway==1.128.0
 
